# figure-solver

./: README.md  figure-solver.cabal  fourmolu.yaml
cmd/figure-solver/: Main.hs
puzzles/: 45.figure  46.figure
